--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.5.2",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.0.2"
   },
@@ -17,6 +19,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-grid-layout": "^1.3.5",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
