--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -8,18 +8,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.5.0",
+    "framer-motion": "^12.23.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.5.2",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^7.6.3",
-    "recharts": "^3.0.2"
+    "recharts": "^3.0.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/chart.js": "^2.9.41",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-grid-layout": "^1.3.5",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
