--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.5.2",
@@ -23,6 +24,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@types/chart.js": "^2.9.41",
     "@types/react": "^19.1.8",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-grid-layout": "^1.3.5",
     "@types/uuid": "^10.0.0",
