--- a/crm-frontend/tsconfig.json
+++ b/crm-frontend/tsconfig.json
@@ -14,6 +14,5 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./src"
   },
-  "include": ["src"]
+  "include": ["src", "components"] // ✅ ADD THIS
 }
-
