--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.0",
     "react": "^18.2.0",
